--- a/FirstProject/FirstApp/templates/html/btregst.html
+++ b/FirstProject/FirstApp/templates/html/btregst.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div class="container mt-4">
-		<div class="row text-center text-light">
+		<div class="row text-center text-dark">
 			<div class="col bg-success mx-2 p-3 border-rounded">
 				<h2>First Division</h2>
 			</div>
@@ -25,10 +25,10 @@
 			<div class="col bg-warning my-2 border-rounded">
 				<h2>Fourth Division</h2>
 				<div class="row">
-					<div class="col mx-2 my-2 bg-danger">
+					<div class="col mx-2 my-2 bg-danger border-rounded">
 						<h2>Fourth-A</h2>
 					</div>
-					<div class="col mx-2 my-2 bg-success">
+					<div class="col mx-2 my-2 bg-success border-rounded">
 						<h2>Fourth-B</h2>
 					</div>
 				</div>
@@ -40,7 +40,7 @@
 		<div class="row">
 			<div class="card col bg-primary mx-2">
 				<div class="card-body">
-					<h2 class="bg-danger text-light p-2 text-center border-rounded">login</h2>
+					<h2 class="bg-danger text-light p-2 text-center border-rounded">Login</h2>
 					<form class="col-md-8 mx-auto">
 						<input type="text" name="" placeholder="Enter Username" class="form-control my-2">
 						<input type="password" name="" placeholder="password" class="form-control my-2">
@@ -51,7 +51,7 @@
 							<div class="col-sm">
 								<input type="submit" name="submit" value="submit" class="form-control btn-outline-danger col-sm my-2">
 							</div>
-						<input type="button" name="" value="Forgotten password" class="form-control btn-outline-success col-sm-6 col-md-8">
+						<input type="button" name="" value="Forgotten password" class="form-control btn-outline-success col-sm-6 col-md-112">
 						</div>
 					</form>
 				</div>
@@ -67,7 +67,7 @@
 								<input type="number" name="" placeholder="Enter age" class="form-control col-sm-6 my-2">
 							</div>
 							<div class="col col-sm-6">
-								<select class="form-control my-">
+								<select class="form-control my-2">
 									<option value="male">Male</option>
 									<option value="female">Female</option>
 								</select>
